# cam_sync

./: CMakeLists.txt  README.md  package.xml
cfg/: CamSyncDyn.cfg  CamSyncDynConfig.cfg  ExposureControlDyn.cfg  ExposureControlDynConfig.cfg
config/: 17408093.yaml  17408094.yaml  18025945.yaml  18025950.yaml  18057298.yaml  18057299.yaml  18057303.yaml  18057304.yaml  cam_sync_example.yaml
docs/: IEEEtran.bst  camsync.bib  main.tex  understanding_debug_graphs.md  usb_performance.md
docs/experimental_data/: cam_0.txt.bz2  cam_1.txt.bz2  cam_2.txt.bz2  cam_3.txt.bz2  cam_4.txt.bz2  cam_5.txt.bz2  cam_6.txt.bz2  cam_7.txt.bz2
docs/figures/: camera_drawn.dia  ip_cameras.dia  threading.dia
docs/sections/: auto_exposure.tex  conclusion.tex  hardware_setup.tex  intro.tex  multithreading.tex  synchronization_algorithm.tex
include/cam_sync/: cam_sync.h  exposure_controller.h
launch/: cam_sync.launch
msg/: MetaData.msg
src/: cam_sync.cpp  cam_sync_node.cpp  exposure_controller.cpp
